--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,12 @@
    <maven.compiler.target>17</maven.compiler.target>
  </properties>
   <dependencies>
-  <dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-core</artifactId>
-    <version>2.15.3</version>
-  </dependency>
-<dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-databind</artifactId>
-    <version>2.15.3</version>
-</dependency>
+  <!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20231013</version>
+	</dependency>
 
     <dependency>
       <groupId>junit</groupId>
@@ -29,5 +25,6 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
 </project>
